# REminiscence

./: CMakeLists.txt  LICENSE  README.md
cmake/: audio_drivers.cmake  git_version.cmake  install.cmake  packaging.cmake
docs/: 3DO.md  Cutscenes.md  README.md
src/: main.cpp  ogg_player.cpp  version.h.in
